--- a/passcode.html
+++ b/passcode.html
@@ -68,7 +68,7 @@
   <script>
     // CHANGE THESE:
     const PASSCODE = "1234";                 // your passcode
-    const DESTINATION = "welcome.html";      // where to send users
+    const DESTINATION = "hate.html";      // where to send users
 
     const form = document.getElementById("gate");
     const input = document.getElementById("code");
@@ -88,3 +88,4 @@
   </script>
 </body>
 </html>
+
