--- a/nate.html
+++ b/nate.html
@@ -1,1 +1,3 @@
-<img href="https://www.instagram.com/leviathan.key/" src="pic_trulli.jpg" alt="Italian Trulli">
+<body style="background-color:black; color:white;">
+<img href="https://www.instagram.com/leviathan.key/" src="super-smash-bros-world-of-light.jpg" alt="Italian Trulli">
+<p style="color:red;">click that image</p>
