--- a/nate.html
+++ b/nate.html
@@ -1,4 +1,5 @@
 <body style="background-color:black; color:white;">
 <!--<img href="https://www.instagram.com/leviathan.key/" src="super-smash-bros-world-of-light.jpg" alt="Italian Trulli"> -->
-<a href="https://www.instagram.com/leviathan.key/"><img src="super-smash-bros-world-of-light.jpg" alt="Clickable image"></a>
+<a href="https://www.instagram.com/p/DAhT_ZHSsbr/?igsh=MTIxb2dzZXJzam9mbg=="><img src="super-smash-bros-world-of-light.jpg" alt="Clickable image"></a>
 <p style="color:red;">click that image</p>
+<a href="https://www.instagram.com/leviathan.key/"style="color:red;">@keys</a>
